--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,11 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "excel4node": "^1.8.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.10.0",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "socket.io": "^4.6.1"
   }
 }
